--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ networkx==3.1
 matplotlib
 pyvis
 Jinja2
+# pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
