--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,6 @@ colorama
 bidict
 arabic-reshaper
 python-bidi
+rich
 # pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
 # pip install --upgrade certifi
